Feat: Create customer endpoint (#13)